--- a/Avaliação_de_Risco_de_Crédito.ipynb
+++ b/Avaliação_de_Risco_de_Crédito.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Avaliação de Risco de Crédito.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -399,20 +398,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "X2k0C9ObFWpR"
-      },
-      "source": [
-        "<img alt=\"Colaboratory logo\" width=\"15%\" src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/novo_logo_bg_claro.png\">\n",
-        "\n",
-        "#### **Data Science na Prática 3.0**\n",
-        "*by [sigmoidal.ai](https://sigmoidal.ai)*\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "ZNvmL_lMsAqU"
       },
       "source": [
@@ -421,14 +406,14 @@
         "\n",
         "Uma das área que causa mais problemas para bancos, financiadoras e empresários é a taxa de inadimplência por parte da sua carteira de clientes.\n",
         "\n",
-        "Avaliar se uma pessoa irá deixar de cumprir com suas obrigações financeiras é de extrema importância, e pode causar um grande impacto no balanço da Instituição. Cada vez mais, soluções vêm sendo desenvolvidas e aprimoradas visando minimizar o risco de *default*. \n",
+        "Avaliar se uma pessoa irá deixar de cumprir com suas obrigações financeiras é de extrema importância, e pode causar um grande impacto no balanço da Instituição. Cada vez mais, soluções vêm sendo desenvolvidas e aprimoradas visando minimizar o risco de *default*.\n",
         "\n",
         "*Default* é o termo utilizado para indicado o não cumprimento das obrigações e/ou condições de um empréstimo (como financiamentos ou dívidas de cartão de crédito). Normalmente, o principal motivo para o descumprimento das condições de pagamento é incapacidade financeira do cliente.\n",
         "\n",
         "<p align=center>\n",
         "  <img src=\"https://images.unsplash.com/photo-1556742502-ec7c0e9f34b1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80\" width=\"40%\">\n",
         "</p>\n",
-        " \n",
+        "\n",
         "Grandes bancos e Fintechs têm apostado cada vez mais em modelos de *Machine Learning* para previnir a inadimplência de alguns clientes.\n",
         "\n",
         "Dentre as principais instituições financeira, o [Nubank](https://nubank.com.br/sobre-nos) é uma das que mais tem se destacado no uso de Inteligência Artificial e times de *Data Science*.\n",
@@ -440,7 +425,7 @@
         "Neste problema, o objetivo é prever qual a probabilidade de um cliente da Startup Nubank não coumprir com suas obrigações financeiras e deixar de pagar a sua fatura do Cartão de Crédito.\n",
         "\n",
         "<p align=center>\n",
-        "<img src=\"http://sigmoidal.ai/wp-content/uploads/2019/10/Nubank_logo.png\" width=\"90px\"></p>\n",
+        "<img src=\"https://fdr.com.br/wp-content/uploads/2021/05/438711cba5e93241b30c17676464af14.png\" width=\"90px\"></p>\n",
         "  \n",
         "Vale ressaltar que essa avaliação deve ser realizada no momento em que o cliente solicita o cartão (normalmente no primeiro contato com a instituição).\n",
         "\n",
@@ -503,7 +488,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "from pycaret.utils import enable_colab \n",
+        "from pycaret.utils import enable_colab\n",
         "from pycaret.datasets import get_data\n",
         "from pycaret.classification import *\n",
         "from pycaret.utils import check_metric\n",
@@ -512,7 +497,7 @@
         "\n",
         "enable_colab()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -586,7 +571,7 @@
       "source": [
         "df = pd.read_csv('http://dl.dropboxusercontent.com/s/xn2a4kzf0zer0xu/acquisition_train.csv?dl=0')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -652,7 +637,7 @@
       "source": [
         "df.sample(1)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -915,7 +900,7 @@
         "print('Número de linhas: {}'.format(df.shape[0]))\n",
         "print('Número de colunas: {}'.format(df.shape[1]))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -976,7 +961,7 @@
       "source": [
         "print(df.columns)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1059,7 +1044,7 @@
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1175,7 +1160,7 @@
         "print(\"\\nVALORES AUSENTES:\")\n",
         "print((df.isnull().sum() / df.shape[0]).sort_values(ascending=False))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1307,7 +1292,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1719,7 +1704,7 @@
         "print(\"\\nVALORES ÚNICOS:\")\n",
         "print(df.nunique().sort_values())"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1814,7 +1799,7 @@
         "id": "0zzBjsoK8OPR"
       },
       "source": [
-        "### 1.6 - Proporção de inadimplentes "
+        "### 1.6 - Proporção de inadimplentes"
       ]
     },
     {
@@ -1852,7 +1837,7 @@
         "print(\"Proporção entre Inadimplentes no Dataset:\")\n",
         "print(df['target_default'].value_counts() / df.shape[0])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1947,7 +1932,7 @@
       "source": [
         "df1 = df.copy()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2009,7 +1994,7 @@
       "source": [
         "df1.reported_income = df1.reported_income.replace(np.inf, np.nan)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2077,7 +2062,7 @@
         "\n",
         "df1.drop(labels=drop_var, axis=1, inplace=True)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2140,7 +2125,7 @@
         "df1.loc[df1['external_data_provider_email_seen_before'] == -999.0,\n",
         "             'external_data_provider_email_seen_before'] = np.nan"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2202,7 +2187,7 @@
       "source": [
         "df1.dropna(subset=['target_default'], inplace=True)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2295,7 +2280,7 @@
         "imputer = imputer.fit(df1.loc[:,cat_df])\n",
         "df1.loc[:,cat_df] = imputer.transform(df1.loc[:,cat_df])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2379,7 +2364,7 @@
       "source": [
         "df1.isnull().sum()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2471,7 +2456,7 @@
       "source": [
         "## 3.0 - Criação do modelo de M.L usando Pycaret\n",
         "\n",
-        "Aqui iremos modelar o Dataset para criarmos um algoritimo de machine learning para fazer a previsão de inadimplentes \n",
+        "Aqui iremos modelar o Dataset para criarmos um algoritimo de machine learning para fazer a previsão de inadimplentes\n",
         "\n",
         "Utilizaremos a biblioteca Pycaret para agilizarmos a modelagem. Foi visto em etapas anteriores que o dataset não possui nenhumas anomalias e nem ouliers significativos, portanto isso facilitará o nossa trabalho."
       ]
@@ -2521,7 +2506,7 @@
         "test.reset_index(inplace=True, drop=True)\n",
         "train.reset_index(inplace=True, drop=True)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2597,7 +2582,7 @@
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2693,7 +2678,7 @@
       "source": [
         "clf = setup(data=train, target='target_default')"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3100,7 +3085,7 @@
         "id": "kA9fyp0NdqQA"
       },
       "source": [
-        "Através do setup, é onde vamos passar cada etapa do nosso pipeline. \n",
+        "Através do setup, é onde vamos passar cada etapa do nosso pipeline.\n",
         "Dessa forma, iremos facilitar nosso trabalho, além de já estarmos preparando esse pipeline para uso em deploy, por exemplo."
       ]
     },
@@ -3140,7 +3125,7 @@
         "            normalize=True,\n",
         "            fix_imbalance=True)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3551,7 +3536,7 @@
         "\n",
         "Comparar todos os modelos para avaliar a performance é um ponto inicial recomendado pelos desenvolvedores do PyCaret, a não ser que você saiba exatamente qual o modelo específico que você quer utilizar, o que é raramente o caso.\n",
         "\n",
-        "Essa função treina todos os modelos na biblioteca do PyCaret e os avalia usando validação cruzada. \n",
+        "Essa função treina todos os modelos na biblioteca do PyCaret e os avalia usando validação cruzada.\n",
         "\n",
         "Para decidirmos que métrica usar, precisamos analisar algumas de nossas opções.\n",
         "\n",
@@ -3597,7 +3582,7 @@
       "source": [
         "best = compare_models(sort='Accuracy')"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3880,7 +3865,7 @@
       "source": [
         "models()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4129,7 +4114,7 @@
       "source": [
         "lgbm = create_model('lightgbm')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4335,7 +4320,7 @@
         "# verificar os parametros\n",
         "print(lgbm)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4405,7 +4390,7 @@
         "\n",
         "Quando um modelo é criado usando o create_model() ele usa os hiperparâmetros padrão para cada modelo. Para fazer o tuning desses parâmetros, usamos a função tune_model().\n",
         "\n",
-        "Essa função faz o tuning dos parâmetros automaticamente, e mais uma vez o avalia com validação cruzada. \n",
+        "Essa função faz o tuning dos parâmetros automaticamente, e mais uma vez o avalia com validação cruzada.\n",
         "\n",
         "OBS: A função tune_model() não recebe um objeto de modelo treinado como input. Ao invés disso, ela requer que o modelo passado seja uma string abreviada do modelo, como instanciamos anteriormente no create_model(). Todas as outras funções do pycaret.regression requerem um objeto de modelo treinado como argumento."
       ]
@@ -4442,7 +4427,7 @@
       "source": [
         "tuned_lgbm = tune_model(lgbm, optimize='Accuracy')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4661,7 +4646,7 @@
         "# veriificando os parâmetros\n",
         "print(tuned_lgbm)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4763,7 +4748,7 @@
         "# Matriz de Confusão\n",
         "plot_model(tuned_lgbm, plot='confusion_matrix')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4791,7 +4776,7 @@
         "# feature importances\n",
         "plot_model(tuned_lgbm, plot='feature')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4833,7 +4818,7 @@
         "# Erro\n",
         "plot_model(tuned_lgbm, plot = 'error')"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4890,7 +4875,7 @@
         "# finalizando o modelo\n",
         "final_lgbm = finalize_model(tuned_lgbm)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4965,7 +4950,7 @@
       "source": [
         "print(final_lgbm)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5070,7 +5055,7 @@
         "unseen_predictions = predict_model(final_lgbm, data=test)\n",
         "unseen_predictions.head()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5376,9 +5361,7 @@
       "metadata": {
         "id": "jijN_QD0ArfK"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
